--- a/package.json
+++ b/package.json
@@ -1,25 +1,54 @@
 {
   "name": "topcoat-variables-desktop",
-  "version": "0.3.1",
   "description": "Variables for the Topcoat Desktop theme",
   "main": "entry.css",
   "style": "src/variables-desktop.css",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "ava",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/topcoat/variables-desktop.git"
+    "url": "https://github.com/topcoat/variables-desktop.git"
   },
   "keywords": [
+    "topcoat",
     "desktop",
     "theme",
-    "css",
-    "topcoat"
+    "css"
   ],
-  "author": "@dam",
-  "license": "Apache2",
+  "author": "Kristofer Joseph <kristoferjoseph@gmail.com> (http://kristoferjoseph.com/)",
+  "contributors": [
+    "Garth Braithwaite <garthdb@gmail.com> (http://garthdb.com)"
+  ],
+  "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/topcoat/variables-desktop/issues"
+    "url": "https://github.com/topcoat/topcoat/issues"
+  },
+  "ava": {
+    "require": [
+      "babel-register"
+    ],
+    "babel": "inherit"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
+  },
+  "devDependencies": {
+    "ava": "^0.16.0",
+    "babel-cli": "^6.14.0",
+    "babel-core": "^6.14.0",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-register": "^6.14.0",
+    "cz-customizable": "^4.0.0",
+    "resin": "^1.1.0",
+    "semantic-release": "^4.3.5"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-customizable"
+    }
   }
 }
